// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not minify by default 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    opacity: \\"cu2kwdz\\"
  }
};
styles.default;"
`;

exports[`does not minify styles 1`] = `".cu2kwdz{opacity:1}"`;

exports[`hashes unknown properties 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    \\"1wfoylc\\": \\"cxrs67x\\"
  }
};
styles.default;"
`;

exports[`minifies known properties 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    j9: \\"cu2kwdz\\"
  }
};
styles.default;"
`;

exports[`minifies nested properties 1`] = `
"import style9 from 'style9';
const styles = {
  default: {
    tp4qmw: {
      \\"1jy3mw3\\": {
        j9: \\"cog47hh\\"
      }
    }
  }
};
styles.default;"
`;
